...
		android:text="This temporary placeholder text will be overwritten by the app."
		android:layout_toEndOf="@+id/icon"
		android:layout_toRightOf="@+id/icon">
	</org.linesofcode.alltrack.framework.ui.ScrollingTextview>

	<com.github.mikephil.charting.charts.LineChart
		android:id="@+id/graph"
		android:layout_width="match_parent"
		android:layout_height="250dp"
		android:layout_below="@+id/icon"/>

</RelativeLayout>

