...
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:scrollbars="vertical"
			app:layout_behavior="@string/appbar_scrolling_view_behavior" />

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/fab"
			android:layout_gravity="end|bottom"
			style="@style/FabStyle"/>
	</android.support.design.widget.CoordinatorLayout>

	<include layout="@layout/navigation"/>

...
