...
					android:text="@string/graph_detail_graph_name"
					android:textSize="20dp"/>
				<EditText
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:hint="@string/graph_detail_graph_name"
					android:id="@+id/edit_graph_name"/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
...
