<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:id="@+id/mainLayout">

	<android.support.design.widget.CoordinatorLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<include layout="@layout/appbar"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="start"
			android:layout_marginBottom="8dp"
			android:layout_marginLeft="16dp"
			android:layout_marginRight="16dp"
			android:textSize="26dp"
			android:text="@string/settings_temp_label"/>

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/fab"
			android:layout_gravity="end|bottom"
			style="@style/FabStyle"/>
	</android.support.design.widget.CoordinatorLayout>

	<include layout="@layout/navigation"/>

</android.support.v4.widget.DrawerLayout>
