<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/navigation_graphs"
            android:icon="@drawable/chart"
            android:id="@+id/nav_data_series"/>
        <item android:title="@string/navigation_settings"
            android:icon="@drawable/settings"
            android:id="@+id/nav_settings"/>
    </group>
</menu>